--- a/docs/resources/css/global.css
+++ b/docs/resources/css/global.css
@@ -284,6 +284,10 @@ body {
     font-family: Roboto, sans-serif;
 }
 
+strong {
+    font-family: Roboto-Bold;
+}
+
 .alert {
     margin-left: 30px;
     margin-right: 20px;
